Nueva Página y Botones
1. CORRECCIÓN: Botones de Texto Alineados
2. NUEVO ARCHIVO: Constancia Lista

--- a/Edmundo_Proyecto_IHC/06c-requisitos.html
+++ b/Edmundo_Proyecto_IHC/06c-requisitos.html
@@ -50,8 +50,8 @@
                 </ul>
             </div>
 
-            <div style="text-align:center; margin-top:20px;">
-                <a href="06-citas.html" class="button" style="max-width:200px; margin: 0 auto;">Volver a Citas</a>
+    <div class="back" style="margin-top: 30px;">
+                <a href="06-citas.html" class="button" style="width: auto; padding: 12px 30px; display: inline-block;">Volver a Citas</a>
             </div>
         </div>
     </div>
