--- a/Edmundo_Proyecto_IHC/08a-nss-prev.html
+++ b/Edmundo_Proyecto_IHC/08a-nss-prev.html
@@ -1,114 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NSS Encontrado</title>
-
+    <meta charset="UTF-8">
+    <title>NSS Localizado</title>
+    <link rel="stylesheet" href="sidebar.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #f3f8f6;
-            font-family: 'Montserrat', sans-serif;
-            text-align: center;
-        }
-
-        header {
-            background-color: #006657;
-            color: white;
-            padding: 15px;
-            font-size: 20px;
-            position: relative;
-        }
-
-        .back-btn {
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-        }
-
-        .container {
-            padding: 25px;
-        }
-
-        .box {
-            background: white;
-            padding: 25px;
-            max-width: 380px;
-            margin: 20px auto;
-            border-radius: 12px;
-            box-shadow: 0 0 8px rgba(0,0,0,0.1);
-        }
-
-        .success-icon {
-            font-size: 45px;
-            color: #009879;
-            margin-bottom: 10px;
-        }
-
-        .nss-number {
-            background: #e8f4f2;
-            padding: 12px;
-            border-radius: 6px;
-            font-size: 22px;
-            letter-spacing: 2px;
-            font-weight: bold;
-            color: #006657;
-            margin: 15px 0;
-        }
-
-        .button {
-            display: block;
-            background-color: #009879;
-            color: white;
-            padding: 12px;
-            border-radius: 8px;
-            text-decoration: none;
-            margin-top: 18px;
-        }
-
-        .back {
-            margin-top: 20px;
-        }
-
-        .back a {
-            color: #006657;
-            text-decoration: none;
-        }
+        .success-icon { font-size: 60px; color: var(--imss-green); margin-bottom: 15px; display: block; text-align: center;}
+        .result-highlight { background: #e8f5e9; color: var(--imss-green); padding: 15px; border-radius: 8px; font-size: 24px; font-weight: bold; text-align: center; margin: 20px 0; border: 1px dashed var(--imss-green); }
+        body.high-contrast .result-highlight { background: #333; }
     </style>
 </head>
-
 <body>
+    <div class="page-container">
+        <div class="main-content">
+            <header>Asignación de NSS</header>
+            <div class="box-container">
+                <span class="material-icons-round success-icon">check_circle</span>
+                <h3>Número Localizado</h3>
+                <p>Hemos encontrado tu Número de Seguridad Social exitosamente.</p>
 
-    <header>
-        NSS Encontrado
-    </header>
+                <div class="result-highlight">1234 5678 90</div>
+                
+                <p style="font-size:12px;">Se ha enviado una copia a tu correo electrónico.</p>
 
-    <div class="container">
-
-        <div class="box">
-            <div class="success-icon">✔</div>
-            <h2 style="color:#006657;">Número Localizado</h2>
-
-            <p style="color:#444; font-size:14px;">
-                Este es tu Número de Seguridad Social asignado:
-            </p>
-
-            <div class="nss-number">1234 5678 90</div>
-
-            <a href="05-inicio.html" class="button">Volver a Inicio</a>
+                <a href="05-inicio.html" class="button">Volver al Inicio</a>
+            </div>
+            <div class="back"><a href="08a-nss.html">⬅ Volver a consultar</a></div>
         </div>
-
-        <div class="back">
-            <a href="08-otros.html">⬅ Regresar</a>
-        </div>
-
     </div>
-
+    <script src="sidebar.js"></script>
 </body>
 </html>
