Alineación y Botón - 06c-requisitos.html

--- a/Edmundo_Proyecto_IHC/09b-actualizar-correo.html
+++ b/Edmundo_Proyecto_IHC/09b-actualizar-correo.html
@@ -43,7 +43,7 @@
         .back-link {
             display: block;
             margin-top: 20px;
-            color: var(--imss-gold);
+            color: var(--imss-green);
             text-decoration: none;
             font-weight: 600;
         }
