--- a/Edmundo_Proyecto_IHC/06c-requisitos.html
+++ b/Edmundo_Proyecto_IHC/06c-requisitos.html
@@ -8,13 +8,30 @@
     <style>
         .req-box {
             background: var(--card-bg);
-            border-radius: 10px; padding: 25px; margin-bottom: 20px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05); width: 100%; max-width: 600px;
+            border-radius: 10px; 
+            padding: 25px; 
+            /* Centrado horizontal de la caja */
+            margin: 0 auto 20px auto; 
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05); 
+            width: 100%; 
+            max-width: 600px;
             text-align: left;
         }
-        .req-box h3 { margin: 0 0 10px; color: var(--imss-green); display: flex; align-items: center; }
-        .req-box h3 .material-icons-round { margin-right: 10px; color: var(--imss-gold); }
-        ul { padding-left: 20px; color: var(--text-color); margin: 0; }
+        .req-box h3 { 
+            margin: 0 0 10px; 
+            color: var(--imss-green); 
+            display: flex; 
+            align-items: center; 
+        }
+        .req-box h3 .material-icons-round { 
+            margin-right: 10px; 
+            color: var(--imss-gold); 
+        }
+        ul { 
+            padding-left: 20px; 
+            color: var(--text-color); 
+            margin: 0; 
+        }
         li { margin-bottom: 8px; }
     </style>
 </head>
@@ -50,8 +67,8 @@
                 </ul>
             </div>
 
-    <div class="back" style="margin-top: 30px;">
-                <a href="06-citas.html" class="button" style="width: auto; padding: 12px 30px; display: inline-block;">Volver a Citas</a>
+            <div class="back">
+                <a href="06-citas.html">⬅ Volver a Citas</a>
             </div>
         </div>
     </div>
